--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>Lost In Space</title>
  </head>
 
- <BODY BGCOLOR="#000000">
- <font face="verdana" color="WHITE" align="center">
+ <BODY BGCOLOR="#BF40BF">
+ <font face="verdana" color="#87CEEB" align="center">
 
  <body>
 
- <h1><font color="#89CFF0">Stuck in Space</font color="#89CFF0"></h1>
+ <h1><font color="#89CFF0">Lost in Space</font color="#89CFF0"></h1>
  <p><font color="YELLOW">Offiziell ins nirgendwo gefunden</font color="YELLOW"></p>
 
  <h2><font color=RED>Herzlich Willkommen bei Stuck In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, wir tracken bald deine hier verschwendete Zeit wie kleine GO's lol</h2></font color=RED>
