--- a/index.html
+++ b/index.html
@@ -9,28 +9,22 @@
 
  <body>
 
- <h1><font color="#89CFF0">Lost in Space</font color="#89CFF0"></h1>
- <p><font color="YELLOW">Offiziell ins nirgendwo gefunden</font color="YELLOW"></p>
+ <h1>Lost in Space</h1>
+ <p>Offiziell ins nirgendwo gefunden</p>
 
- <h2><font color=RED>Herzlich Willkommen bei Stuck In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, wir tracken bald deine hier verschwendete Zeit wie kleine GO's lol</h2></font color=RED>
-
- <p>
- <img src="https://www.ardalpha.de/wissen/weltall/raumfahrt/hubble-weltraumteleskop-blaue-galaxie-100~_v-img__16__9__l_-1dc0e8f74459dd04c91a0d45af4972b9069f1135.jpg?version=871ed"/>
- </p>
-
+ <h2>Herzlich Willkommen bei Lost In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, wir tracken bald deine hier verschwendete Zeit wie kleine GO's lol</h2>
  <br>
  
  <font color="LIME">
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
  <p>
- Schönes Bild oder? Aber jetzt
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
  ADIOS AMIGOOOOOOS
  </p>
 
