--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Lost In Space</title>
  </head>
 
- <BODY BGCOLOR="#BF40BF">
+ <BODY BGCOLOR="#570987">
  <font face="verdana" color="#87CEEB" align="center">
 
  <body>
