--- a/index.html
+++ b/index.html
@@ -32,5 +32,70 @@
 
  </font>
 
+
+  
+ <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Automatic Time Tracking Tool</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+  }
+  .container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  h6 {
+    text-align: center;
+  }
+  p {
+    margin: 10px 0;
+  }
+</style>
+</head>
+<body>
+<div class="container">
+  <h1>Automatic Time Tracking Tool</h1>
+  <p id="taskName">Task: N/A</p>
+  <p id="startTime">Start Time: N/A</p>
+  <p id="endTime">End Time: N/A</p>
+  <p id="totalTime">Total Time: N/A</p>
+</div>
+<script>
+  var startTime;
+  var endTime;
+
+  window.onload = function() {
+    startTime = new Date();
+    document.getElementById("startTime").innerText = "Start Time: " + formatTime(startTime);
+    document.getElementById("endTime").innerText = "End Time: Running...";
+    document.getElementById("totalTime").innerText = "Total Time: Calculating...";
+  };
+
+  window.onunload = function() {
+    endTime = new Date();
+    document.getElementById("endTime").innerText = "End Time: " + formatTime(endTime);
+    var totalTime = calculateTime(startTime, endTime);
+    document.getElementById("totalTime").innerText = "Total Time: " + totalTime;
+  };
+
+  function formatTime(date) {
+    return date.toLocaleTimeString();
+  }
+
+  function calculateTime(start, end) {
+    var diff = end - start;
+    var hours = Math.floor(diff / 3600000);
+    var minutes = Math.floor((diff % 3600000) / 60000);
+    return hours + ' hours ' + minutes + ' minutes';
+  }
+</script>
  </body>
 </html>
