--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
  <h2>Herzlich Willkommen bei Lost In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, wir tracken bald deine hier verschwendete Zeit wie kleine GO's lol</h2>
  <br>
- 
- <font color="LIME">
  <br>
  <br>
  <br>
@@ -27,19 +25,16 @@
  <p>
  ADIOS AMIGOOOOOOS
  </p>
+ </body>
 
- </font color=LIME>
-
- </font>
-
-
-  
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Automatic Time Tracking Tool</title>
+<title>Real-Time Time Tracking Tool</title>
 <style>
   body {
-    
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
   }
   .container {
     max-width: 600px;
@@ -59,36 +54,46 @@
 </head>
 <body>
 <div class="container">
-  <h1>Automatic Time Tracking Tool</h1>
+  <h1>Real-Time Time Tracking Tool</h1>
   <p id="taskName">Task: N/A</p>
   <p id="startTime">Start Time: N/A</p>
-  <p id="totalTime">Total Time: N/A</p>
+  <p id="elapsedTime">Elapsed Time: 00:00:00</p>
 </div>
 <script>
   var startTime;
-  var endTime;
+  var interval;
 
-  window.onload = function() {
+  function startTracking() {
+    startTime = new Date();
     document.getElementById("startTime").innerText = "Start Time: " + formatTime(startTime);
-    document.getElementById("endTime").innerText = "End Time: Running...";
-    document.getElementById("totalTime").innerText = "Total Time: Calculating...";
-  };
+    interval = setInterval(updateElapsedTime, 1000);
+  }
 
-  window.onunload = function() {
-    document.getElementById("endTime").innerText = "End Time: " + formatTime(endTime);
-    var totalTime = calculateTime(startTime, endTime);
-    document.getElementById("totalTime").innerText = "Total Time: " + totalTime;
-  };
+  function stopTracking() {
+    clearInterval(interval);
+  }
+
+  function updateElapsedTime() {
+    var currentTime = new Date();
+    var elapsedTime = currentTime - startTime;
+    document.getElementById("elapsedTime").innerText = "Elapsed Time: " + formatElapsedTime(elapsedTime);
+  }
 
   function formatTime(date) {
-    return date.toLocaleTimeString();
+    var hours = addZero(date.getHours());
+    var minutes = addZero(date.getMinutes());
+    var seconds = addZero(date.getSeconds());
+    return hours + ":" + minutes + ":" + seconds;
   }
 
-  function calculateTime(start, end) {
-    var diff = end - start;
-    var hours = Math.floor(diff / 3600000);
-    var minutes = Math.floor((diff % 3600000) / 60000);
+  function formatElapsedTime(elapsedTime) {
+    var hours = addZero(Math.floor(elapsedTime / (1000 * 60 * 60)));
+    var minutes = addZero(Math.floor((elapsedTime % (1000 * 60 * 60)) / (1000 * 60)));
+    var seconds = addZero(Math.floor((elapsedTime % (1000 * 60)) / 1000));
+    return hours + ":" + minutes + ":" + seconds;
   }
-</script>
- </body>
+
+  function addZero(num) {
+    return (num < 10 ? "0" : "") + num;
+  }
 </html>
