--- a/index.html
+++ b/index.html
@@ -27,4 +27,25 @@
  </p>
  </body>
 
+
+
+
+
+ <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Zeiterfassung</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div class="container">
+    <h1>Zeiterfassung</h1>
+    <div id="timer">00:00:00</div>
+</div>
+<script src="script.js"></script>
+</body>
+
+
+
+
+
 </html>
