--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 #timer {
     font-size: 36px;
     margin-bottom: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 </style>
 </head>
