--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <title>Zeiterfassung</title>
 <style>
 .container {
+    position: relative;
     text-align: center;
     margin-top: 50px;
 }
@@ -40,7 +41,7 @@
 #timer {
     font-size: 36px;
     margin-bottom: 20px;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
 }
