--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 #timer {
     font-size: 36px;
     margin-bottom: 20px;
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 10px;
 }
+
 </style>
 </head>
 <body>
