--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
 
 <title>Zeiterfassung</title>
 <style>
-.container {
-    position: relative;
-    text-align: center;
-    margin-top: 50px;
-}
-
 #timer {
-    font-size: 20px;
-    margin-bottom: 20px;
-    position: absolute;
-    top: 50px;
+    font-size: 36px;
+    position: fixed;
+    top: 10px;
     right: 10px;
 }
 
