--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
  <body>
 
- <h1>Lost in Space</h1>
+ <header>Lost in Space</header>
  <p>Offiziell ins nirgendwo gefunden</p>
 
  <h2>Herzlich Willkommen bei Lost In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, bald kommt mehr lol</h2>
