--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
  <body>
 
  <header>
+  <BODY BGCOLOR="#FFFFFF">
   <h1>Lost in Space</h1>
- <p>Offiziell ins nirgendwo gefunden</p>
+  <p>Offiziell ins nirgendwo gefunden</p>
+  </BODY BGCOLOR="#FFFFFF"> 
  </header>
  <h2>Herzlich Willkommen bei Lost In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, bald kommt mehr lol</h2>
  <br>
