--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 
  <body>
 
+ header {
+  display: block;
+} 
  <header>
+  
   <BODY BGCOLOR="#FFFFFF">
   <h1>Lost in Space</h1>
   <p>Offiziell ins nirgendwo gefunden</p>
-  </BODY BGCOLOR="#FFFFFF"> 
+  </BODY BGCOLOR="#FFFFFF">
+  
  </header>
  <h2>Herzlich Willkommen bei Lost In Space, wir sind ein Tester-Unternehmen und testen Links die ins nichts führen... so wie dieser :) <br>Also viel Spaß im nirgendwo, bald kommt mehr lol</h2>
  <br>
