--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
  <p>
  ADIOS AMIGOOOOOOS
  </p>
+  <ul>
+  <li><a tabindex="0" aria-current="page">Startseite</a></li>
+  <li><a href="inhalt.html">Bilder von unseren Produkten</a></li>
+  <li><a href="preise.html">Unsere Preise</a></li>
+  <li><a href="kontakt.html">Kontakt und Impressum</a></li>
+  </ul>
  </body>
 
 </html>
