--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
  <body>
   <header>
-   <h1 >Lost in Space</h1>
-   <p>Offiziell ins nirgendwo gefunden</p>
+   <style>
+    <h1 color="RED">Lost in Space</h1 color="RED">
+    <p>Offiziell ins nirgendwo gefunden</p>
+   </style>
   </header>
  </body>
 
