--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>
   <header>
    <style>
-    <h1 color="RED">Lost in Space</h1 color="RED">
+    <h1><color="RED">Lost in Space</h1></color="RED">
     <p>Offiziell ins nirgendwo gefunden</p>
    </style>
   </header>
