--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
  <body>
   <header>
-   <style>
-    <h1><color="RED">Lost in Space</h1></color="RED">
+    <h1 style=color:red>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
-   </style>
   </header>
  </body>
 
