--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  <font face="verdana" color="#87CEEB" align="center">
 
  <body>
-  <header>
-    <h1 style=color:red>Lost in Space</h1>
+  <header color:red>
+    <h1>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
   </header>
  </body>
