--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <font face="verdana" color="#87CEEB" align="center">
 
  <body>
-  <header color:red>
+  <header header bgcolor="RED">
     <h1>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
   </header>
