--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <title>Lost In Space</title>
  </head>
 
- <BODY BGCOLOR="#570987">
+ <BODY BGCOLOR="#aaaaaa">
  <font face="verdana" color="#87CEEB" align="center">
 
+    header {
+        background-color: #6d6d6d; /Dunkelgrau/
+        padding: 20px;
+      }
+
  <body>
-  <header header bgcolor="RED">
+  <header color:red>
     <h1>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
   </header>
