--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
  <head>
   <title>Lost In Space</title>
+  <style>
+    header {
+        background-color: #6d6d6d; /Dunkelgrau/
+        padding: 20px;
+    }
+  </style>
  </head>
 
  <BODY BGCOLOR="#aaaaaa">
  <font face="verdana" color="#87CEEB" align="center">
 
-    header {
-        background-color: #6d6d6d; /Dunkelgrau/
-        padding: 20px;
-      }
-
  <body>
-  <header color:red>
+  <header>
     <h1>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
   </header>
  </body>
-
 </html>
