--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
 
  <BODY BGCOLOR="#aaaaaa">
- <font face="verdana" color="#87CEEB" align="center">
+ <font face="verdana" color="WHITE" align="center">
 
  <body>
   <header>
