--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <style>
     header {
         background-color: #6d6d6d; /Dunkelgrau/
-        padding: 30px;
+        margin:0;
+        padding: 0px;
     }
   </style>
  </head>
