--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   <style>
     header {
         background-color: #6d6d6d; /Dunkelgrau/
-        margin:0;
+        margin: 0;
         padding: 0px;
+    }
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #1d1d2a; /Hellgrau/
+      color: #ffffff; /* Weiß */
+      overflow-x: hidden;
     }
   </style>
  </head>
