--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <title>Lost In Space</title>
   <style>
     header {
-        background-color: #6d6d6d; /Dunkelgrau/
+        background-color: #6d6d6d; /*Dunkelgrau*/
         margin: 0;
         padding: 0px;
     }
+    body {
+        background-color: #aaaaaa; /*Hellgrau*/
+        margin: 0;
+        padding: 0;
   </style>
  </head>
 
