--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     header {
         background-color: #6d6d6d; /*Dunkelgrau*/
         margin: 0;
-        padding: 0px;
+        padding: 0;
     }
     body {
         background-color: #aaaaaa; /*Hellgrau*/
