--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <style>
     header {
         background-color: #6d6d6d; /*Dunkelgrau*/
-        margin: 0;
-        padding: 0;
+        margin: -1;
+        padding: 20px;
     }
     body {
         background-color: #aaaaaa; /*Hellgrau*/
