--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         margin: 0;
         padding: 0;
     }
+    footer {
+        background-color: #6d6d6d; /*hellgrau*/
+        margin: 0;
+        padding: 0;
+    }
   </style>
  </head>
 
@@ -25,5 +30,8 @@
     <h1>Lost in Space</h1>
     <p>Offiziell ins nirgendwo gefunden</p>
   </header>
+  <br>
+  <br>
+  <button type="button" a href="wikipedia.de">Press me</button>
  </body>
 </html>
