--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     footer {
         background-color: #6d6d6d; /*hellgrau*/
         margin: 0;
-        padding: 0;
+        padding: 20px;
     }
   </style>
  </head>
@@ -32,6 +32,11 @@
   </header>
   <br>
   <br>
-  <button type="button" a href="wikipedia.de">Press me</button>
+  <button type="button">Press me</button>
+
+  <ul>
+    <li><a href="wikipedia.de">Wikipedia</a></li>
+    <li><a href="instant-gaming.com">Instant-Gaming</a></li>
+  </ul>
  </body>
 </html>
