--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
   <button type="button">Press me</button>
 
   <ul>
-    <li><a href="wikipedia.de">Wikipedia</a></li>
-    <li><a href="instant-gaming.com">Instant-Gaming</a></li>
+    <li><a href="penis">Penix</a></li>
+    <li><a href="penis">Penis</a></li>
   </ul>
+
+
+  <footer>
+    <button type="button">Impressum</button>
+  </footer>
  </body>
 </html>
