--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
   </header>
   <br>
   <br>
-  <button type="button">Press me</button>
-
-  <ul>
-    <li><a href="penis">Penix</a></li>
-    <li><a href="penis">Penis</a></li>
-  </ul>
+  <button type="button" a href="https://dreams-999.github.io/GMT/">Press me</button>
+  
+  <a href="penis">Penis</a>
+  <a href="penis">Penis</a>
 
 
   <footer>
