--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
   <br>
   <br>
   <button type="button" a href="https://dreams-999.github.io/GMT/">Press me</button>
-  
-  <a href="penis">Penis</a>
-  <a href="penis">Penis</a>
+
+  <ol>
+   <li><a href="https://dreams-999.github.io/GMT/">Gestaltung und Medientechnik GK</a></li>
+  </ol>
 
 
   <footer>
