--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   </header>
   <br>
   <br>
-  <button type="button" a href="https://dreams-999.github.io/GMT/">Press me</button>
-
-  <ol>
-   <li><a href="https://dreams-999.github.io/GMT/">Gestaltung und Medientechnik GK</a></li>
-  </ol>
+  <p>
+   <a href="https://dreams-999.github.io/GMT/">
+     <button type="button">Gestaltung und Medientechnik GK</button>
+   </a>
+  </p>
 
 
   <footer>
