--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   <br>
   <br>
   <p>
+   <a href="https://dreams-999.github.io/ShieldSecurity/">
+     <button type="button">GMT LK Seite</button>
+   </a>
+  </p>
+  <p>
    <a href="https://dreams-999.github.io/GMT/">
      <button type="button">Gestaltung und Medientechnik GK</button>
    </a>
